Bug 79913 - Empty submenus and crash
Summary: Empty submenus and crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta2
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Arnaud Versini
URL:
Whiteboard: target:4.4.0 target:4.3.0.1
Keywords: regression
Depends on:
Blocks: a11y-Linux
  Show dependency treegraph
 
Reported: 2014-06-11 09:36 UTC by Jean-Baptiste Faure
Modified: 2014-06-16 13:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
empty dropdown submenu and error message box (111.53 KB, image/png)
2014-06-11 09:36 UTC, Jean-Baptiste Faure
Details
gdbtrace.log (3.44 KB, text/plain)
2014-06-15 06:45 UTC, Jean-Baptiste Faure
Details
strace.log (558.44 KB, application/x-bzip)
2014-06-15 06:48 UTC, Jean-Baptiste Faure
Details
another backtrace (7.98 KB, text/plain)
2014-06-15 18:13 UTC, Jean-Baptiste Faure
Details
full backtrace for each exception (68.91 KB, application/x-bzip)
2014-06-15 18:18 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2014-06-11 09:36:08 UTC
Created attachment 100871 [details]
empty dropdown submenu and error message box

Version: 4.3.0.0.beta2+ (Build ID: f817dac57c748dd156cd9bacf8368dd561de88d4) under Ubuntu 14.04 x86-64 ; clean complete build (make distclean, autogen, make)

Steps to reproduce:
- open a new presentation
- click on the arrow of the button "Slide" to create a new slide
Observed: the dropdown menu is empty and an error message box is displayed. Clicking the OK button crashes LibreOffice (restoration menu displayed on restart)
Same problem with the "Slide layout" button.

best regards. JBF
Comment 1 Jean-Baptiste Faure 2014-06-11 09:38:08 UTC
Of course, it works in LO 4.2.x. So added keyword regression.

Best regards. JBF
Comment 2 ribotb 2014-06-11 12:44:56 UTC
Hi,

I can't confirm this problem with Win7/x86. The two buttons mentioned by Jean-Baptiste display a dropdown menu containing thumbnails.

Best regards,
Bernard

Version: 4.3.0.0.beta2
Build ID: a06aa316117a6ff0f05c697c82831c227812d810

Win7/x86
Comment 3 Firas Hanife 2014-06-11 13:00:16 UTC
Cannot reproduce on openSUSE with LibreOffice 4.3.0.0.beta2.
Comment 4 Jean-Baptiste Faure 2014-06-11 13:44:05 UTC
Argh! same problem for me with LO 4.3.0.0beta2+ built at Build ID: ebbb52a25da123b084f5138f780fb39573276d86 which is, if I am not wrong, the last commit of LO 4.3.0.0beta2.

Best regards. JBF
Comment 5 sophie 2014-06-11 18:27:04 UTC
Done a fresh and clean install of Version: 4.3.0.0.beta2+
Build ID: f817dac57c748dd156cd9bacf8368dd561de88d4
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-3, Time: 2014-06-11_08:23:28 on Ubuntu 14.04 and reproduced exactly - Sophie
Comment 6 pierre-yves samyn 2014-06-12 04:48:06 UTC
Hi

I do not reproduce on windows 7/64 & Version: 4.3.0.0.beta2
Build ID: a06aa316117a6ff0f05c697c82831c227812d810

Regards
Pierre-Yves
Comment 7 Jean-Baptiste Faure 2014-06-12 07:38:42 UTC
The problem seems to happen only on Ubuntu. Indeed I do not reproduce it on another PC with Xubuntu 14.04 (but with a Unity session). I tested LO 4.3.0.0beta1 (generic Linux build) and the last daily build (the same as Sophie in comment #5).
The same builds on my PC under Ubuntu 14.04 x86-64 reproduce the bug. So the problem does not seem to be linked to Unity.

@Bjoern: do you have any idea what could be causing that? What could I do to help to find the source of the problem?

Best regards. JBF
Comment 8 Julien Nabet 2014-06-13 05:10:22 UTC
On pc Debian x86-64 with 4.3 sources updated yesterday, I don't reproduce this (even when using French localization).

Just nitpicking but the screenshot shows you used the button allowing to change the layout of the slide, not to create a new slide.  
However, I tested both and the submenus are ok for them.

(Theme related problem?)
Do you build in debug mode? It could be useful you retrieve console logs.
Comment 9 Julien Nabet 2014-06-13 22:58:46 UTC
I tried all the LO themes with master sources, I don't reproduce this :(

Jean-Baptiste/Sophie: Would it be possible to retrieve a backtrace? (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace)
Comment 10 Jean-Baptiste Faure 2014-06-14 05:05:49 UTC
(In reply to comment #9)
> I tried all the LO themes with master sources, I don't reproduce this :(

I think the problem is in Ubuntu. I have 2 PC one with Xubuntu 14.04 + Unity session and one with Ubuntu 14.04. I reproduce the bug only on the machine with Ubuntu, not on Xubuntu.
> 
> Jean-Baptiste/Sophie: Would it be possible to retrieve a backtrace? (see
> https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.
> 2FLinux:_How_to_get_a_backtrace)

I am currently trying to build LO 4.3.0.0beta2+ in debug mode.

Best regards. JBF
Comment 11 Jean-Baptiste Faure 2014-06-15 06:45:14 UTC
Created attachment 101080 [details]
gdbtrace.log

Not sure if this trace will be useful, it ends with "no stack".
next attachment strace.log

Best regards. JBF
Comment 12 Jean-Baptiste Faure 2014-06-15 06:48:48 UTC
Created attachment 101083 [details]
strace.log
Comment 13 Julien Nabet 2014-06-15 07:03:45 UTC
Jean-Baptiste: following your comment 11, just to be sure, do you reproduce the crash with the built sources?
Comment 14 Jean-Baptiste Faure 2014-06-15 07:32:49 UTC
(In reply to comment #13)
> Jean-Baptiste: following your comment 11, just to be sure, do you reproduce
> the crash with the built sources?

Yes.
Not sure it is really a crash because there is the error message box. LO close when I click the OK button. That said there is nothing else possible to do.

Best regards. JBF
Comment 15 Julien Nabet 2014-06-15 07:39:48 UTC
Just for the test, would you have some time to give a try to the old way to retrieve a bt?

To do it:
1) Open a first console and launch Impress
2) Open a second console and do:
- LOPID=$(pidof soffice.bin)
- gdb soffice.bin $LOPID
- type "c" (for "Continue")

Then reproduce the problem and monitor gdb console 2 to see if it stops because of the crash
If yes, type "bt"
Comment 16 Jean-Baptiste Faure 2014-06-15 18:13:50 UTC
Created attachment 101113 [details]
another backtrace

The backtrace of the last exception, just before the crash.

Best regards. JBF
Comment 17 Jean-Baptiste Faure 2014-06-15 18:18:11 UTC
Created attachment 101114 [details]
full backtrace for each exception

Very numerous exceptions, hope would be useful.

Best regards. JBF
Comment 18 Arnaud Versini 2014-06-15 18:19:21 UTC
Proposed patch validated by jbfaure
https://gerrit.libreoffice.org/#/c/9791/
Comment 19 Julien Nabet 2014-06-15 19:14:31 UTC
Joren: very useful indeed! Seeing accessibility part, I enabled accessibility and could reproduce the crash! The only difference is when I clicked on the dropdown menu, I could see the icons of the options.

Niklass/Jacobo: seeing commits about accessibility (because there's no expert quoted in https://wiki.documentfoundation.org/FindTheExpert), I thought you might be interested in this tracker.
Comment 20 Commit Notification 2014-06-16 10:55:45 UTC
Arnaud Versini committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7eceffef49c9f498c5758d5e351c0f22126003e5

Resolve fdo#79913 by checking index bounds



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2014-06-16 10:59:29 UTC
Arnaud Versini committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b99a8af33f6a349225efe489507c848f89d8fd13&h=libreoffice-4-3

Resolve fdo#79913 by checking index bounds


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Jean-Baptiste Faure 2014-06-16 13:49:20 UTC
Verified fixed in LO 4.3.0.0beta2+ under Ubuntu 14.04 x86-64. Thank you very much.

Best regards. JBF